[project]
name = "blank-app-template"
version = "0.1.0"
description = "A simple Streamlit app template."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "streamlit>=1.58.0", "joblib==1.5.3", "matplotlib==3.11.0",
"numpy==2.4.6",
"pandas==3.0.3",
"scikit_learn==1.9.0",
"shap==0.51.0"
]

[tool.uv]
package = false
